<resources>
    <string name="app_name">Movie Reviews App</string>
    <string name="text_desc_intro_1">In this application you will find many interesting movie reviews</string>
    <string name="text_desc_intro_2">The choice of movies is very wide and diverse. It will help you choose the best movies</string>
    <string name="text_desc_intro_3">Let\'s get access to a huge number of great reviews on all movies</string>
    <string name="text_navigate_to_main_page">Start Finding Reviews</string>
    <string name="text_placeholder_version">Version %s</string>
    <string name="text_placeholder_copyright">© 2021 Team 1</string>
    <string name="text_placeholder_development">Development by</string>
    <string name="text_placeholder_challenge">Challenge | Chapter VI</string>
    <string name="text_placeholder_read_more">…Read more</string>
    <string name="text_placeholder_welcome">Welcome to</string>
    <string name="text_placeholder_next">Next</string>
    <string name="text_placeholder_show_all_reviews">Show All Reviews</string>
    <string name="text_placeholder_query_hint">Search…</string>
    <string name="text_title_about">About</string>
    <string name="text_title_genre">Genre</string>
    <string name="text_title_date_release">Date Release</string>
    <string name="text_title_overview">Overview</string>
    <string name="text_title_duration">Duration</string>
    <string name="text_title_ok">OK</string>
    <string name="text_title_cancel">Cancel</string>
    <string name="text_title_all_reviews">All Reviews</string>
    <string name="text_title_no_review">Uh-oh! No Reviews Yet</string>
    <string name="text_title_favorite_placeholder">Start Saving All Your Favorite Movies</string>
    <string name="text_title_movie">Movie</string>
    <string name="text_title_search">Search</string>
    <string name="text_title_favorite">Favorite</string>
    <string name="text_title_profile">Profile</string>
    <string name="text_title_ratings">Ratings</string>
    <string name="text_title_image_slider">Image Slider</string>
    <string name="text_title_now_playing_movies">Now Playing Movies</string>
    <string name="text_title_search_movies">Search Movies</string>
    <string name="text_title_no_search_result">No Results Found</string>
    <string name="message_empty_movies">There was a problem loading the list of movies.</string>
    <string name="message_no_review">it\'s a little empty here! No reviews have been submitted yet.</string>
    <string name="message_favorite_placeholder">Tap the favorite icon in all your favorite movies and we will save them all here.</string>
    <string name="message_search_movies">Find your favorite movies.</string>
    <string name="message_no_search_result">Please check you have the right spelling,or try different keywords.</string>
    <string name="text_placeholder_username">Username</string>
    <string name="text_placeholder_email">Email</string>
    <string name="text_title_change_password">Change Password</string>
    <string name="text_title_change_profile">Change Profile</string>
    <string name="text_title_logout">Confirm Logout</string>
    <string name="text_tittle_change_profile">Change Profile</string>
    <string name="text_placeholder_update">Update</string>
    <string name="text_desc_logout">Are you sure you want to logout?</string>
    <string name="error_username_empty">Username Should be Filled</string>
    <string name="error_email_empty">Email Should be Filled</string>
    <string name="error_email_invalid">Email is Invalid</string>
    <string name="text_placeholder_logout">Logout</string>
    <string name="text_placeholder_close">Close</string>
    <string name="message_lost_connection">Connection/signal lost - Please reconnect.</string>

    <string-array name="genre_name_list">
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>TV Movie</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>

    <string name="text_placeholder_coin_price">$%s</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_username">Username</string>
    <string name="text_hint_password">Password</string>
    <string name="text_btn_register">Sign Up</string>
    <string name="text_btn_login">Log In</string>
    <string name="error_password_empty">Password Should be Filled</string>
    <string name="text_create_account">Create an Account</string>
    <string name="text_register_success">Register Success!</string>
    <string name="text_title_toolbar_register">Register Account</string>
    <string name="text_login_success">Login Success !</string>
    <string name="text_title_toolbar_login">Login</string>

    <string name="text_dialog_logout_task_positive">Yes</string>
    <string name="text_dialog_logout_task_negative">No</string>
    <string name="text_icon_menu_logout">Logout</string>
    <string name="text_logout_dialog">Do you want to Logout ?</string>
    <string name="image_logo_login">Image Logo Login</string>
    <string name="tv_sign_up_register">Sign Up</string>
    <string name="tv_log_in_register">Log In</string>
    <string name="tv_log_in_login">Log In</string>
    <string name="tv_sign_up_login">Sign Up</string>
    <string name="iv_logo_register">TODO</string>
    <string name="sign_up_complete">Sign-Up Complete</string>
    <string name="ok_signup_complete">OK</string>
    <string name="image_signup_compete">TODO</string>
</resources>