<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="@dimen/_150sdp"
    android:layout_gravity="center"
    tools:context=".ui.register.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_16sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_14sdp">

            <ImageView
                android:id="@+id/iv_dialog_image"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_150sdp"
                android:background="@color/color_primary"
                android:contentDescription="@string/image_signup_compete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_complete"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_signup_complete"
                app:layout_constraintBottom_toTopOf="@+id/btn_complete_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_complete_register"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="48dp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:background="@drawable/btn_bg"
                android:text="@string/ok_signup_complete"
                android:textColor="@color/color_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
