<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".ui.about.AboutActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIconTint="@color/white" />

    <ImageView
        android:id="@+id/iv_logo_app"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_120sdp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_logo_app_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_about"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_version"
        style="@style/Text.Light.Movie.App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_app"
        tools:text="Version 1.0" />

    <TextView
        android:id="@+id/tv_copyright"
        style="@style/Text.Light.Movie.App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/text_placeholder_copyright"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_version" />

    <TextView
        android:id="@+id/tv_development"
        style="@style/Text.Light.Movie.App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/text_placeholder_development"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_copyright" />

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/Text.Bold.Movie.App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/app_name"
        android:textColor="@color/color_secondary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_development" />

    <TextView
        android:id="@+id/tv_challenge"
        style="@style/Text.Light.Movie.App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder_challenge"
        android:textColor="@color/color_secondary"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>